$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.544 2008/02/12 12:52:51 nm4 Exp $

Change log file for Exim from version 4.21
-------------------------------------------

Exim version 4.70
-----------------

NM/01 Bugzilla 657: Embedded PCRE removed from the exim source tree.
      When building exim an external PCRE library is now needed -
      PCRE is a system library on the majority of modern systems.
      See entry on PCRE_LIBS in EDITME file.

NM/02 Bugzilla 646: Removed unwanted C/R in Dovecot authenticator
      conversation.  Added nologin parameter to request.
      Patch contributed by Kirill Miazine

TF/01 Do not log submission mode rewrites if they do not change the address.

TF/02 Bugzilla 662: Fix stack corruption before exec() in daemon.c.

NM/03 Bugzilla 602: exicyclog now handles panic log, and creates empty
      log files in place.  Contributed by Roberto Lima

NM/04 Bugzilla 667: close socket used by dovecot authenticator

TF/03 Bugzilla 615: When checking the local_parts router precondition
      after a local_part_suffix or local_part_prefix option, Exim now
      does not use the address's named list lookup cache, since this
      contains cached lookups for the whole local part.

NM/05 Bugzilla 521: Integrated SPF Best Guess support contributed by
      Robert Millan.  Documentation is in experimental-spec.txt



Exim version 4.69
-----------------

TK/01 Add preliminary DKIM support. Currently requires a forked version of
      ALT-N's libdkim that I have put here:
      http://duncanthrax.net/exim-experimental/

      Note to Michael Haardt: I had to rename some vars in sieve.c. They
      were called 'true' and it seems that C99 defines that as a reserved
      keyword to be used with 'bool' variable types. That means you could
      not include C99-style headers which use bools without triggering
      build errors in sieve.c.

NM/01 Bugzilla 592: --help option is handled incorrectly if exim is invoked