@@ -1,4 +1,4 @@
-# $Cambridge: exim/src/src/routers/Makefile,v 1.3 2005/09/12 13:50:03 ph10 Exp $
+# $Cambridge: exim/src/src/routers/Makefile,v 1.4 2008/02/14 13:49:35 fanf2 Exp $
 
 # Make file for building a library containing all the available routers and
 # calling it routers.a. This is called from the main make file, after cd'ing
@@ -18,7 +18,6 @@ routers.a:       $(OBJ)
 		 @echo "$(AR) routers.a"
 		 @$(AR) routers.a $(OBJ)
 		 $(RANLIB) $@
-		 @$(RM_COMMAND) -rf ../drtables.o
 
 .SUFFIXES:       .o .c
 .c.o:;           @echo "$(CC) $*.c"
